--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/Roshent00/Club-Directory-2022-2023/blob/main/Club%20Directory%20copy.pdf">Click Here For Info</a></p>
+  <p><a href="copy.pdf">Click Here For Info</a></p>
 </html>
